force-app/main/default/objects/TemplateSetting__c/fields/AgeFrom__c.field-meta.xml
<CustomField>
    <fullName>AgeFrom__c</fullName>
    <description>This is to define from which specific age the template should be attached, this should be in the format: __Y__M OR __Y.</description>
    <inlineHelpText>This should be in the format: __Y__M  OR  __Y</inlineHelpText>
    <label>Age From</label>
    <length>50</length>
    <type>Text</type>
</CustomField>