force-app/main/default/objects/TemplateSetting__c/fields/AgeFromMonths__c.field-meta.xml
<CustomField>
    <fullName>AgeFromMonths__c</fullName>
    <description>Minimum age in months</description>
    <label>Age From (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>