force-app/main/default/objects/TemplateSetting__c/fields/AgeFromYears__c.field-meta.xml
<CustomField>
    <fullName>AgeFromYears__c</fullName>
    <description>Minimum age in years</description>
    <label>Age From (Years)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>