force-app/main/default/objects/TemplateSetting__c/fields/AgeTo__c.field-meta.xml
<CustomField>
    <fullName>AgeTo__c</fullName>
    <description>This is to define to which specific age the template should be attached, this should be in the format: __Y__M or __Y .</description>
    <inlineHelpText>This should be in the format: __Y__M or  __Y</inlineHelpText>
    <label>Age To</label>
    <length>20</length>
    <type>Text</type>
</CustomField>