force-app/main/default/objects/TemplateSetting__c/fields/AgeToMonths__c.field-meta.xml
<CustomField>
    <fullName>AgeToMonths__c</fullName>
    <description>Maximum age in months</description>
    <label>Age To (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>