force-app/main/default/objects/TemplateSetting__c/fields/AgeToYears__c.field-meta.xml
<CustomField>
    <fullName>AgeToYears__c</fullName>
    <description>Maximum age in years</description>
    <label>Age To (Years)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>