force-app/main/default/objects/TemplateSetting__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This is to define if a setting is active or not.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>