force-app/main/default/objects/TemplateSetting__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This should be filtered list of all the active label templates available for Market and Program.</description>
    <label>Label</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <errorMessage>There are no Labels available for this Market and program combination!!</errorMessage>
        <filterItems>
            <field>APXTConga4__Conga_Template__c.APXTConga4__Template_Type__c</field>
            <operation>equals</operation>
            <value>Label</value>
        </filterItems>
        <filterItems>
            <field>$Source.Market__c</field>
            <operation>equals</operation>
            <valueField>APXTConga4__Conga_Template__c.Market__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.Program__c</field>
            <operation>equals</operation>
            <valueField>APXTConga4__Conga_Template__c.Program__c</valueField>
        </filterItems>
        <infoMessage>Value does not exist or does not match filter criteria.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>APXTConga4__Conga_Template__c</referenceTo>
    <relationshipName>Template_Settings1</relationshipName>
    <type>Lookup</type>
</CustomField>