force-app/main/default/objects/TemplateSetting__c/fields/Letter__c.field-meta.xml
<CustomField>
    <fullName>Letter__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This should be filtered list of all the active letter templates available for Market and Program.</description>
    <label>Letter</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <errorMessage>There are no Letters available for this Market and program combination!!</errorMessage>
        <filterItems>
            <field>APXTConga4__Conga_Template__c.APXTConga4__Template_Type__c</field>
            <operation>equals</operation>
            <value>Letter</value>
        </filterItems>
        <filterItems>
            <field>$Source.Market__c</field>
            <operation>equals</operation>
            <valueField>APXTConga4__Conga_Template__c.Market__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.Program__c</field>
            <operation>equals</operation>
            <valueField>APXTConga4__Conga_Template__c.Program__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>APXTConga4__Conga_Template__c</referenceTo>
    <relationshipName>Template_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>