force-app/main/default/objects/TemplateSetting__c/fields/RecordSharingKey__c.field-meta.xml
<CustomField>
    <fullName>RecordSharingKey__c</fullName>
    <description>Key value generated for record sharing with public groups</description>
    <formula>TEXT(Market__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Sharing Key</label>
    <type>Text</type>
</CustomField>