force-app/main/default/objects/TemplateSetting__c/validationRules/AgeFromFormatCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>AgeFromFormatCheck</fullName>
    <active>false</active>
    <description>AgeFrom should be in this format: __Y__M Or __Y</description>
    <errorConditionFormula>NOT(
OR(
REGEX(AgeFrom__c , "[0-9]{2}[Y]"),
REGEX(AgeFrom__c , "[0-9]{2}[Y](0[1-9]|1[012])[M]")
)
)</errorConditionFormula>
    <errorDisplayField>AgeFrom__c</errorDisplayField>
    <errorMessage>Please enter AgeFrom in this format: __Y__M Or __Y</errorMessage>
</ValidationRule>