force-app/main/default/objects/TemplateSetting__c/validationRules/AgeToShouldBeGreaterThanAgeFrom.validationRule-meta.xml
<ValidationRule>
    <fullName>AgeToShouldBeGreaterThanAgeFrom</fullName>
    <active>true</active>
    <description>The "age to" should be always greater than the "age from" specified</description>
    <errorConditionFormula>(AgeToYears__c  * 12) +  AgeToMonths__c  &lt;=  ( AgeFromYears__c * 12) +  AgeFromMonths__c</errorConditionFormula>
    <errorMessage>Age To should be always greater than Age From.</errorMessage>
</ValidationRule>