force-app/main/default/objects/TemplateSetting__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Market__c</columns>
    <columns>Program__c</columns>
    <columns>IsActive__c</columns>
    <columns>Label__c</columns>
    <columns>Letter__c</columns>
    <columns>AgeFromYears__c</columns>
    <columns>AgeFromMonths__c</columns>
    <columns>AgeToMonths__c</columns>
    <columns>AgeToYears__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>